# AxiomRunner

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  Makefile  README.md  analysis_manifest.tsv  axonrunner_review.md  fix.md
adapters/: Cargo.toml
adapters/src/: agent_coclai.rs  agent_registry.rs  channel.rs  channel_discord.rs  channel_irc.rs  channel_matrix.rs  channel_registry.rs  channel_slack.rs  channel_telegram.rs  channel_whatsapp.rs  context_axiomme.rs  contracts.rs  error.rs  lib.rs  memory.rs  memory_axiomme.rs  memory_hybrid.rs  memory_markdown.rs  memory_sqlite.rs  provider_openai.rs  provider_registry.rs  runtime.rs  tool.rs  tool_browser.rs  tool_composio.rs  tool_delegate.rs  tool_memory.rs
adapters/tests/: channel_external.rs  contracts.rs  error.rs  memory.rs  memory_hybrid.rs  tool_surface.rs
apps/: Cargo.toml
apps/src/: agent_loop.rs  channel.rs  channel_serve.rs  cli_args.rs  cli_command.rs  cli_perf_suite_args.rs  cli_perf_suite_report.rs  cli_perf_suite_targets.rs  cli_runtime.rs  config_loader.rs  cron.rs  daemon.rs  daemon_supervisor.rs  doctor.rs  estop.rs  gateway.rs  gateway_boundary.rs  gateway_signature.rs  hex_util.rs  identity_bootstrap.rs  integrations.rs  lib.rs  main.rs  metrics.rs  metrics_http.rs  migrate_args.rs  migrate_io.rs  migrate_memory.rs  migrate_report.rs  migrate_runner.rs  migrate_types.rs  onboard.rs  otp_gate.rs  runtime_compose.rs  service.rs  skills.rs  skills_registry.rs  status.rs  time_util.rs
apps/tests/: config_priority.rs  daemon_loop.rs  e2e_cli.rs  gateway_e2e.rs  heartbeat_loop.rs  legacy_paths.rs  migrate_h1.rs  perf_suite_smoke.rs  policy_audit.rs  release_gate_s2.rs  release_security_gate.rs  rollback_recovery_h3.rs  transition_rehearsal_h4.rs
apps/tests/common/: mod.rs
axonrunner_7674ced_autonomous_review/: README.md
benchmarks/: config.env  summary.md  summary.tsv
crates/adapters/: ANALYSIS_REPORT.md  Cargo.toml
crates/adapters/src/: agent_coclai.rs  agent_registry.rs  async_http_bridge.rs  channel.rs  channel_discord.rs  channel_irc.rs  channel_matrix.rs  channel_registry.rs  channel_slack.rs  channel_telegram.rs  channel_validate.rs  channel_whatsapp.rs  context_axiomme.rs  contracts.rs  error.rs  lib.rs  memory.rs  memory_axiomme.rs  memory_hybrid.rs  memory_markdown.rs  memory_sqlite.rs  provider_anthropic.rs  provider_codex_runtime.rs  provider_openai.rs  provider_registry.rs  tool.rs  tool_browser.rs  tool_composio.rs  tool_delegate.rs  tool_memory.rs  tool_workspace.rs  tool_write.rs
crates/adapters/tests/: channel_external.rs  channel_tool.rs  contracts.rs  error.rs  memory.rs  memory_hybrid.rs  tool.rs  tool_surface.rs
crates/apps/: Cargo.toml  IMPROVEMENTS.md  README.md
crates/apps/src/: agent_loop.rs  async_runtime_host.rs  channel.rs  channel_runtime.rs  channel_serve.rs  cli_args.rs  cli_command.rs  cli_perf_suite_report.rs  cli_perf_suite_targets.rs  cli_runtime.rs  command_contract.rs  config_loader.rs  cron.rs  dev_guard.rs  display.rs  doctor.rs  env_util.rs  estop.rs  gateway_signature.rs  goal_file.rs  heartbeat.rs  hex_util.rs  identity_bootstrap.rs  integrations.rs  lib.rs  main.rs  metrics_http.rs  onboard.rs  operator_render.rs  otp_gate.rs  parse_util.rs  replay.rs  run_commit.rs  runtime_compose.rs  service.rs  skills.rs  skills_registry.rs  state_store.rs  status.rs  trace_store.rs  (+1 more)
crates/apps/src/channel/: store.rs
crates/apps/src/cli/: args.rs  command.rs
crates/apps/src/cli_runtime/: actions.rs  lifecycle.rs  run_session.rs
crates/apps/src/daemon/: mod.rs  types.rs
crates/apps/src/gateway/: boundary.rs  mod.rs  signature.rs
crates/apps/src/runtime_compose/: artifacts.rs  plan.rs
crates/apps/src/storage/: state.rs  trace.rs
crates/apps/tests/: autonomous_eval_corpus.rs  config_priority.rs  daemon_loop.rs  daemon_supervisor.rs  e2e_cli.rs  fault_path_suite.rs  gateway_e2e.rs  h2_parallel.rs  heartbeat_loop.rs  metrics_dashboard.rs  nightly_dogfood_contract.rs  perf_suite_smoke.rs  policy_audit.rs  release_security_gate.rs  rollback_recovery_h3.rs  transition_rehearsal_h4.rs
crates/apps/tests/common/: mod.rs
crates/apps/tests/fixtures/goals/: approval.json  budget_exhausted.json  intake.json  nextjs_app.json  node_api.json  on_risk.json  python_fastapi.json  rust_service.json
crates/apps/tests/fixtures/packs/: nextjs_app.json  node_api.json  on_risk.json  python_fastapi.json  rust_service.json
crates/apps/tests/fixtures/workspaces/node_common/: package.json
crates/apps/tests/fixtures/workspaces/rust_service/: Cargo.toml
crates/apps/tests/fixtures/workspaces/rust_service/src/: lib.rs
docs/: 01_PRODUCT_SPEC.md  02_TARGET_ARCHITECTURE.md  03_CODEK_INTEGRATION_RFC.md  04_CAPABILITY_MATRIX.md  05_IMPLEMENTATION_MASTER_PLAN.md  06_TASKS_BACKLOG.md  07_LIBRARY_AND_SOURCE_RECOMMENDATIONS.md  08_VALIDATION_RELEASE_RUNBOOK.md  09_SELF_REVIEW.md  10_REFERENCE_BASIS.md  ADR-001-public-async-adapter-contract.md  ADR_CODEX_RUNTIME_0_5.md  AUTONOMOUS_AGENT_BRIDGE.md  AUTONOMOUS_AGENT_SPEC.md  AUTONOMOUS_AGENT_TARGET.md  AXIOM_COMPLETE_REVIEW.md  CAPABILITY_MATRIX.md  CODEK_RUNTIME_CONTRACT.md  DEPLOYMENT.md  DEVELOPMENT_ROADMAP.md  DOCS_ALIGNMENT.md  GOAL_STACK_PLAYBOOK.md  IMPLEMENTATION-PLAN.md  PRODUCT_BLUEPRINT.md  PROJECT_STRUCTURE.md  README.md  RELEASE_CHECKLIST.md  RELEASE_EVIDENCE.md  RUNBOOK.md  TASKS.md  UPGRADE_PLAN.md  VERSIONING.md  WORKFLOW_PACK_CONTRACT.md  e4-cli-transition-ops-guide.md  feature-adoption-checklist.md  project-charter.md  (+5 more)
(+165 files in other folders)
