[workspace]
members = [
    "crates/apps",
    "crates/core",
    "crates/adapters"
]
resolver = "3"

[workspace.package]
version = "1.0.0"
edition = "2024"

[workspace.metadata.axiomrunner_identity]
product_name = "AxiomRunner"
binary_name = "axiomrunner_apps"
env_prefix = "AXIOMRUNNER"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = "warn"
