[package]
name = "axiom_adapters"
version.workspace = true
edition.workspace = true

[lib]
name = "axiom_adapters"
path = "src/lib.rs"

[features]
channel-discord = []
channel-slack = []
channel-irc = []
channel-matrix = []
channel-whatsapp = []

[lints]
workspace = true

[dependencies]
axiom_core = { path = "../core" }
rusqlite = { version = "0.32.1", features = ["bundled"] }
coclai = { path = "../../coclai/crates/coclai" }
tokio = { version = "1", features = ["rt"] }
reqwest = { version = "0.12", features = ["blocking", "json", "rustls-tls"], default-features = false }
serde_json = "1"
axiomme-core = { git = "https://github.com/AxiomOrient/AxiomMe", rev = "8d2e66ee57217d6a61c800547127684327510855" }
