[package]
name = "axiom_apps"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
axiom_core = { path = "../core" }
axiom_adapters = { path = "../adapters", features = ["channel-discord", "channel-slack", "channel-irc", "channel-matrix", "channel-whatsapp"] }
axiom_schema = { path = "../schema" }
rusqlite = { version = "0.32.1", features = ["bundled"] }
serde_json = "1"
hmac = "0.12"
sha2 = "0.10"
reqwest = { version = "0.12", features = ["blocking", "json", "rustls-tls"], default-features = false }
totp-rs = { version = "5", features = ["gen_secret"] }
