[package]
name = "axonrunner_adapters"
version.workspace = true
edition.workspace = true

[lib]
name = "axonrunner_adapters"
path = "src/lib.rs"

[features]
channel-discord = []
channel-slack = []
channel-irc = []
channel-matrix = []
channel-whatsapp = []

[lints]
workspace = true

[dependencies]
axonrunner_core = { path = "../core" }
axonrunner_infra = { path = "../infra" }
rusqlite = { version = "0.32.1", features = ["bundled"] }
coclai = { path = "../../../coclai/crates/coclai" }
tokio = { version = "1", features = ["rt-multi-thread"] }
reqwest = { version = "0.12", features = ["blocking", "json", "rustls-tls"], default-features = false }
serde_json = "1"
axiomme-core = { git = "https://github.com/AxiomOrient/AxiomSync", rev = "8d2e66ee57217d6a61c800547127684327510855" }
