[package]
name = "axonrunner_adapters"
version.workspace = true
edition.workspace = true

[lib]
name = "axonrunner_adapters"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
axonrunner_core = { path = "../core" }
codex_runtime = { package = "codex-runtime", version = "0.4.0" }
rusqlite = { version = "0.32.1", features = ["bundled"] }
tokio = { version = "1", features = ["rt-multi-thread"] }
reqwest = { version = "0.12", features = ["blocking", "json", "rustls-tls"], default-features = false }
serde_json = "1"
