[package]
name = "axonrunner_apps"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
axonrunner_core = { path = "../core" }
axonrunner_adapters = { path = "../adapters" }
tokio = { version = "1", features = ["rt-multi-thread", "sync"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
