[package]
name = "axiomrunner_apps"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
axiomrunner_core = { path = "../core" }
axiomrunner_adapters = { path = "../adapters" }
tokio = { version = "1", features = ["rt-multi-thread", "sync"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
