[package]
name = "axiomrunner_apps"
version.workspace = true
edition.workspace = true
default-run = "axiomrunner_apps"
description = "AxiomRunner CLI runtime"

[[bin]]
name = "axiomrunner_apps"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
axiomrunner_core = { path = "../core" }
axiomrunner_adapters = { path = "../adapters" }
tokio = { version = "1", features = ["rt-multi-thread", "sync"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
